ui/src/components/trip-info-card/trip-info-card.module.css
.tripInfoCard {
    /* Forcing 400px for now, can make responsive later if desired */
    /* width: clamp(400px, 25%, 400px); */
    width: 100%;
    outline: 2px solid transparent;
    transition: all 0.2s;
    height: fit-content;
    position: relative;
}

.anomalyAlert {
    background-color: #B03020;
    color: white;
    padding: 6px 12px;
    border-radius: 6px;
    font-weight: bold;
    text-align: center;
}

/* TODO: Remove `:not(:has(.toggleHelpRequested:hover))` when debug button is removed */
.tripInfoCard.showHover:not(:has(.toggleHelpRequested:hover)):hover {
    outline: 2px solid #1677FF;
    box-shadow: 0 0 8px #1677FF;
    cursor: pointer;
}

.cardTitle {
    align-items: center;
    gap: 8px;
    min-width: 0;
}

.cartName {
    flex: 1;
    min-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
}

.tripInfoCard.helpRequested {
    outline: 2px solid #ffd700;
    box-shadow: 0 0 8px #ffd700;
    margin-top: 4px;
}

.cardAlert {
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);

    background-color: #ffd700;
    padding: 0 8px;
    border-radius: 8px;
    font-weight: bold;
    display: none;
}

.helpRequested .cardAlert {
    display: block;
}

/* TODO: Remove below when debug button no longer needed */

.tripInfoCard .toggleHelpRequested {
    position: absolute;
    bottom: 0;
    right: 0;
    opacity: 0;
}

.tripInfoCard:hover .toggleHelpRequested {
    opacity: 1;
}

